# python-aiplatform

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .repo-metadata.json  CHANGELOG.md  CONTRIBUTING.rst  FIX.md  ILL  README.rst  change-metadata.py  librarian.py  main.py  mypy.ini  noxfile.py  owlbot.py  pyproject.toml  release-notes.md  release-please-config.json  renovate.json  setup.py  synth.metadata  synth.py
.github/: .OwlBot.lock.yaml  .OwlBot.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release-please.yml  release-trigger.yml  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: block_major_releases.yml  docs.yml  google-contributor-stale.yml  lint.yml  mypy.yml  stale.yml  unittest.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.in  requirements.txt  test-samples-against-head.sh  test-samples-impl.sh  test-samples.sh  trampoline_v2.sh
.kokoro/continuous/: common.cfg  continuous.cfg  docfx.cfg  gemini_docfx.cfg  system.cfg  unit.cfg
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/presubmit/: common.cfg  coverage.cfg  presubmit.cfg  release.cfg  system.cfg  unit_3-10.cfg  unit_3-11.cfg  unit_3-12.cfg  unit_3-13.cfg  unit_3-14.cfg  unit_3-8.cfg  unit_3-9.cfg  unit_a2a_py314.cfg  unit_agentplatform_a2a_py311.cfg  unit_agentplatform_a2a_py314.cfg  unit_agentplatform_adk_py311.cfg  unit_agentplatform_ag2_py311.cfg  unit_agentplatform_langchain_py311.cfg  unit_agentplatform_llama_index_py311.cfg  unit_langchain_py310.cfg  unit_langchain_py311.cfg  unit_langchain_py312.cfg  unit_langchain_py313.cfg  unit_langchain_py38.cfg  unit_langchain_py39.cfg  unit_ray_2-33.cfg  unit_ray_2-4.cfg  unit_ray_2-42.cfg  unit_ray_2-42_py311.cfg  unit_ray_2-47_py311.cfg  unit_ray_2-9.cfg
.kokoro/release/: common.cfg
.librarian/: state.yaml
.librarian/generator-input/: librarian.py  noxfile.py
.sample_configs/: implementations.py  process_configs.yaml  resource_info.yaml  variants.yaml
.sample_configs/param_handlers/: batch_delete_data_items_sample.py  batch_migrate_resources_sample.py  cancel_batch_prediction_job_sample.py  cancel_custom_job_sample.py  cancel_data_labeling_job_sample.py  cancel_hyperparameter_tuning_job_sample.py  cancel_training_pipeline_sample.py  create_annotation_sample.py  create_annotation_spec_sample.py  create_batch_prediction_job_bigquery_sample.py  create_batch_prediction_job_custom_image_explain_sample.py  create_batch_prediction_job_custom_tabular_explain_sample.py  create_batch_prediction_job_sample.py  create_batch_prediction_job_tabular_explain_sample.py  create_batch_prediction_job_tabular_forecasting_sample.py  create_batch_prediction_job_text_entity_extraction_sample.py  create_batch_prediction_job_text_sentiment_analysis_sample.py  create_batch_prediction_job_video_action_recognition_sample.py  create_custom_job_sample.py  (+129 more)
agentplatform/: __init__.py
docs/: README.rst  aiplatform.rst  conf.py  index.rst  summary_overview.md
gemini_docs/: README.md  README.rst  conf.py  index.rst
pypi/: README.md
pypi/_vertex_ai_placeholder/: README.md  pyproject.toml  setup.py  version.py
samples/: CONTRIBUTING.md  cancel_hyperparameter_tuning_job_sample.py  cancel_training_pipeline_sample.py  cancel_training_pipeline_sample_test.py  create_batch_prediction_job_video_classification_sample.py  create_batch_prediction_job_video_classification_sample_test.py  create_batch_prediction_job_video_object_tracking_sample.py  create_batch_prediction_job_video_object_tracking_sample_test.py  create_custom_job_sample.py  create_custom_job_sample_test.py  create_data_labeling_job_images_sample.py  create_data_labeling_job_images_sample_test.py  create_data_labeling_job_sample.py  create_data_labeling_job_sample_test.py  create_data_labeling_job_video_sample.py  create_data_labeling_job_video_sample_test.py  create_dataset_image_sample.py  create_dataset_sample.py  create_dataset_tables_bigquery_sample.py  create_dataset_tables_gcs_sample.py  create_dataset_tabular_bigquery_sample.py  create_dataset_tabular_gcs_sample.py  create_dataset_text_sample.py  create_dataset_video_sample.py  create_endpoint_sample.py  create_hyperparameter_tuning_job_sample.py  create_training_pipeline_image_classification_sample.py  create_training_pipeline_image_classification_sample_test.py  create_training_pipeline_image_object_detection_sample.py  create_training_pipeline_image_object_detection_sample_test.py  create_training_pipeline_sample.py  create_training_pipeline_sample_test.py  create_training_pipeline_tables_classification_sample.py  create_training_pipeline_tables_regression_sample.py  create_training_pipeline_tabular_classification_sample.py  create_training_pipeline_tabular_classification_sample_test.py  create_training_pipeline_tabular_regression_sample.py  create_training_pipeline_tabular_regression_sample_test.py  create_training_pipeline_text_classification_sample.py  create_training_pipeline_text_entity_extraction_sample.py  (+57 more)
scripts/: fixup_aiplatform_v1beta1_keywords.py  fixup_keywords.py  run_flaky_test_diagnostic.py
sdk_schema_tests/: common_contract.py  google_ai_only_contract.py  vertex_ai_only_contract.py
test-changes-agent/: .gitignore  Makefile  README.md  deployment_metadata.json  pyproject.toml
test-mtls-agentt/: GEMINI.md  README.md  deployment_metadata.json  pyproject.toml
test-mtls-agentt/app/: __init__.py  agent_engine_app.py
test-mtls-agentt/app/app_utils/: deploy.py  telemetry.py  typing.py
test-mtls-agentt/tests/eval/: eval_config.json
testing/: constraints-3.10.txt  constraints-3.11.txt  constraints-3.12.txt  constraints-3.13.txt  constraints-3.14.txt  constraints-3.6.txt  constraints-3.7.txt  constraints-3.8.txt  constraints-3.9.txt  constraints-a2a.txt  constraints-ag2.txt  constraints-agentplatform-frameworks.txt  constraints-langchain.txt  constraints-ray-2.33.0.txt  constraints-ray-2.4.0.txt  constraints-ray-2.42.0.txt  constraints-ray-2.47.1.txt  constraints-ray-2.9.3.txt
vertexai/: __init__.py  py.typed
(+9363 files in other folders)
